2007-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* flumotion-dvb.spec.in:
	  fix buglets

2007-02-08  Michael Smith  <msmith@fluendo.com>

	* configure.ac:
	  Back to dev.

=== release 0.3.1 ===

2007-02-08  Michael Smith  <msmith@fluendo.com>

	* Makefile.am:
	* env
	* configure.ac:
	* flumotion-dvb.spec.in:
	* po/fr.po:
	* po/nl.po:
	  To 0.3.1

2006-12-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Change component type to be named as per convention.

2006-11-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	We should no longer use es-pids as we have a PMT.

2006-11-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix pipeline.

2006-11-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Remove offending (sq).

2006-11-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Added a scaled-width property so we can fix interlacing issues.

2006-11-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Added program-number to properties.

2006-11-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Output PAT and PMT info at debug level when changed.

2006-11-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Add a translatable message.
	Fix dvb-type: FILE.
	Add queues after tee.
	* flumotion/component/dvb/dvbbin.py:
	initial import of a DvbBin that does close interaction between
	dvbsrc and flutsdemux.

2006-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Do not require frequency as it's not required for files.
	Only pass freq and pids to dvbsrc not to filesrc as well.